# job

./: .gitignore  DESIGN.md  LICENSE  Makefile  README.md  config.example.yaml  config.yaml  pyproject.toml
.github/workflows/: ci.yml
resumes/: resume_example.typ  resume_vineet_kushwaha.typ
scripts/: run.sh
src/: __init__.py  cli.py  config.py  ui.py  web_server.py
src/db/: __init__.py  models.py  session.py
src/pipeline/: __init__.py  runner.py  stages.py
src/providers/: __init__.py  browser.py  gmail.py
src/providers/llm/: __init__.py  agy_cli.py  anthropic.py  base.py  gemini.py  local_agy.py  openai.py
src/static/: index.html
src/utils/: __init__.py  caching.py  cleaner.py  email_verifier.py  exporter.py  logging.py  timezone.py
tests/: test_browser.py  test_caching.py  test_cleaner_and_exporter.py  test_config.py  test_email_verifier.py  test_pipeline.py  test_scoring.py  test_timezone.py  test_web_widget.py
