[project]
name = "recruiting-platform"
version = "0.1.0"
description = "A production-grade, extensible, resumable cold-email recruiting platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.111.0",
    "curl-cffi>=0.7.0",
    "dnspython>=2.5.0",
]

[project.scripts]
recruiting-platform = "src.cli:app"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-pyyaml>=6.0.12.12",
    "types-beautifulsoup4>=4.12.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["ARG001", "ARG002", "SIM102", "SIM117", "E501", "B008"]




[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


